# NANOMATCH

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  generate_data.py  out.perf-folded  trader.py
src/: benchmark.cpp  csv_reader.cpp  csv_reader.h  logger.cpp  logger.h  main.cpp  memory_pool.h  order.h  orderbook.cpp  orderbook.h  ring_buffer.h  tcp_server.cpp  tcp_server.h
src_baseline/: main.cpp  order.h  orderbook.cpp  orderbook.h
src_mapBased/: main.cpp  order.h  orderbook.cpp  orderbook.h  test_match
